fix alignment of bullets in article list items

--- a/src/components/ArticleLink/article-link.module.sass
+++ b/src/components/ArticleLink/article-link.module.sass
@@ -1,6 +1,6 @@
 .articleLink
   display: flex
-  align-items: center
+  align-items: flex-start
   padding: 0
   &::before
     content: ""
@@ -9,6 +9,8 @@
     margin-right: 10px
     background: #000
     display: block
+    margin-top: 8px
+    flex-shrink: 0
 
   a
     color: #333
